# annotate-anu

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api-core/: .env  .env.example  Dockerfile  README.md  plan_notes_annotation_coverage_improvements.md  pyproject.toml  verify_creation.py
apps/api-core/src/: alembic.ini
apps/api-core/src/app/: config.py  main.py
apps/api-core/src/app/core/: __init__.py  password.py  security.py
apps/api-core/src/app/dependencies/: auth.py  database.py  rbac.py
apps/api-core/src/app/exceptions/: models.py
apps/api-core/src/app/helpers/: database.py  logger.py  response_api.py
apps/api-core/src/app/integrations/: redis.py
apps/api-core/src/app/models/: __init__.py  activity.py  annotation.py  attribute.py  byom.py  data_management.py  export.py  history.py  image.py  image_quality.py  job.py  project.py  task.py  user.py
apps/api-core/src/app/repositories/: activity.py  annotation.py  attribute.py  export.py  image.py  image_quality.py  job.py  models.py  project.py  project_image.py  quality_job.py  shared_image.py  shared_image_tag.py  tag.py  tag_category.py  task.py  user.py
apps/api-core/src/app/routers/: admin.py  analytics.py  annotations.py  attributes.py  auth.py  exports.py  images.py  inference.py  jobs.py  models.py  moondream.py  project_images.py  projects.py  share.py  shared_images.py  tag_categories.py  tags.py  tasks.py
apps/api-core/src/app/schemas/: activity.py  analytics.py  annotation.py  auth.py  data_management.py  export.py  image.py  job.py  job_sync.py  project.py  share.py  task.py
apps/api-core/src/app/services/: analytics_service.py  auth.py  export.py  filesystem.py  health_checker.py  image_quality_service.py  inference_proxy.py  mock_classifier.py  mock_detector.py  mock_segmenter.py  models.py  moondream_proxy.py  thumbnail.py
apps/api-core/src/app/tasks/: __init__.py  classification.py  export.py  main.py  quality.py
apps/api-core/src/migrations/: env.py
apps/api-core/src/migrations/versions/: 20251206_0648-d5e5edcedeae_add_username_column_to_users.py  20251206_1321-d1b07709bc9c_initial_schema.py  20251206_2330-a1b2c3d4e5f6_add_project_activity_table.py  20251207_0113-4025b2661ffa_change_project_task_job_ids_to_integer.py  20251208_0049-0fb19a3bf6d4_add_is_archived_to_tasks_and_jobs.py  20251213_1500-a1b2c3d4e5f7_add_data_management_tables.py  20251214_2338-b7e3c8f9a2d1_make_tags_project_specific.py  20251220_1430-c8f9a2d1b7e3_add_attribute_tables.py  20251221_1000-d9e8f7a6b5c4_add_tag_categories.py  20251225_1200-e1f2a3b4c5d6_fix_tag_uniqueness_per_category.py  20251226_1000-f2a3b4c5d6e7_add_export_tables.py  20251227_1000-g3a4b5c6d7e8_add_export_versioning.py  20251227_1200-h4b5c6d7e8f9_add_export_resolved_metadata.py  20260101_1248-i5c6d7e8f9a0_add_aspect_ratio_column.py  20260102_1000-j6d7e8f9a0b1_add_image_quality_metrics.py  20260102_1100-k7e8f9a0b1c2_add_quality_jobs_table.py  20260103_1400-l8f9a0b1c2d3_add_one_tag_per_label_constraint.py  (+2 more)
apps/api-core/src/tests/: test_migrations.py
docs/: README.md  (+9 more)
(+352 files in other folders)
