[project]
name = "api-core"
version = "0.1.0"
description = "Core API service for model registry and management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "redis>=7.1.0",
    "cryptography>=46.0.3",
    "python-multipart>=0.0.20",
    "alembic>=1.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
