[project]
name = "api-core"
version = "0.1.0"
description = "Core API service for model registry and management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.1.0",
    "httpx>=0.28.1",
    "redis>=5.0.0,<6.5",
    "celery>=5.4.0",
    "cryptography>=46.0.3",
    "python-multipart>=0.0.20",
    "alembic>=1.17.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=24.1.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "imagehash>=4.3.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "testcontainers[postgres]>=4.9.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
